<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/Codigo"
        android:layout_width="334dp"
        android:layout_height="45dp"
        android:layout_marginStart="39dp"
        android:layout_marginTop="46dp"
        android:layout_marginEnd="38dp"
        android:ems="10"
        android:hint="@string/Codigo"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/Nombre"
        android:layout_width="332dp"
        android:layout_height="44dp"
        android:layout_marginStart="39dp"
        android:layout_marginTop="121dp"
        android:layout_marginEnd="40dp"
        android:ems="10"
        android:hint="@string/Nombre"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/Caso"
        android:layout_width="333dp"
        android:layout_height="48dp"
        android:layout_marginStart="39dp"
        android:layout_marginTop="193dp"
        android:layout_marginEnd="39dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:layout_width="153dp"
        android:layout_height="222dp"
        android:layout_marginStart="39dp"
        android:layout_marginTop="271dp"
        android:layout_marginEnd="219dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Caso" />

        <RadioButton
            android:id="@+id/Ninguno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Nul" />

        <RadioButton
            android:id="@+id/Bajo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Baj" />

        <RadioButton
            android:id="@+id/Medio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Med" />

        <RadioButton
            android:id="@+id/Alto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Alt" />

    </RadioGroup>

    <RadioGroup
        android:layout_width="157dp"
        android:layout_height="223dp"
        android:layout_marginStart="214dp"
        android:layout_marginTop="271dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Vaccuna" />

        <CheckBox
            android:id="@+id/Primera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Pri" />

        <CheckBox
            android:id="@+id/Segunda"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Seg" />

        <CheckBox
            android:id="@+id/Tercera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Ter" />

        <CheckBox
            android:id="@+id/Cuarta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Cua" />
    </RadioGroup>

    <Button
        android:id="@+id/Agregar"
        android:layout_width="153dp"
        android:layout_height="49dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="527dp"
        android:layout_marginEnd="218dp"
        android:onClick="Registar"
        android:text="@string/Agregar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Buscar"
        android:layout_width="152dp"
        android:layout_height="51dp"
        android:layout_marginStart="223dp"
        android:layout_marginTop="619dp"
        android:layout_marginEnd="36dp"
        android:onClick="Buscar"
        android:text="@string/Buscar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Eliminar"
        android:layout_width="155dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="620dp"
        android:layout_marginEnd="216dp"
        android:onClick="Eliminar"
        android:text="@string/Eliminar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Limpiar"
        android:layout_width="149dp"
        android:layout_height="49dp"
        android:layout_marginStart="222dp"
        android:layout_marginTop="527dp"
        android:layout_marginEnd="40dp"
        android:onClick="Limpiar"
        android:text="@string/Limpiar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/guardador"
        android:layout_width="344dp"
        android:layout_height="29dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="692dp"
        android:layout_marginEnd="37dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>